# webp-screenshot-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  documentation.yml  release.yml  security.yml
benches/: capture.rs  encoding.rs
examples/: multi_display.rs  simple_capture.rs  streaming.rs  test_multimonitor.rs
src/: error.rs  lib.rs  memory_pool.rs  types.rs
src/capture/: mod.rs  traits.rs
src/capture/linux/: mod.rs  wayland_capture.rs  x11_capture.rs
src/capture/macos/: core_graphics_capture.rs  mod.rs  screencapturekit.rs
src/capture/windows/: capture_api.rs  gdi.rs  mod.rs
src/encoder/: gpu.rs  mod.rs  simd.rs  webp.rs
src/ffi/: mod.rs
src/pipeline/: mod.rs  streaming.rs  zero_copy.rs
tests/: buffer_safety.rs  core_benchmarks.rs  integration.rs  streaming_pipeline.rs  webp_quality.rs
